--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Coming Soon | ClickKit - Advanced Tools for ClickUp Power Teams</title>
+    <title>ClickKit - Advanced Tools for ClickUp Power Teams</title>
     <meta name="description" content="The toolkit agencies and growing teams use to maximize ClickUp. Advanced forms, dashboards, and automation. Join the waitlist for exclusive founder pricing.">
 
     <!-- Favicon -->
@@ -59,7 +59,7 @@
 
             <!-- Hero Title -->
             <h1 class="hero-title">
-                Advanced forms, dashboards, and automation for <span class="gradient-text">ClickUp agencies and power teams</span>
+                Advanced toolkit for <span class="gradient-text">ClickUp power users</span>
             </h1>
 
             <!-- Hero Description -->
