--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ClickKit - Maximum ClickUp Power</title>
-    <meta name="description" content="ClickKit is the toolkit for ClickUp agencies and growing teams. Advanced forms, dashboards, and automation to maximize ClickUp.">
+    <title>ClickKit - ClickUp Backup, Archive & Automation Tools</title>
+    <meta name="description" content="Backup and restore your ClickUp data with automated backups and archive management. Plus advanced forms, dashboards, and automation for agencies and power teams.">
 
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="57x57" href="img/favicon/apple-icon-57x57.png">
@@ -69,12 +69,12 @@
 
             <!-- Hero Title -->
             <h1 class="hero-title">
-                The toolkit agencies use to <br><span class="gradient-text">maximize ClickUp</span>
+                Backup, restore & <br><span class="gradient-text">maximize ClickUp</span>
             </h1>
 
             <!-- Hero Description -->
             <p class="hero-description">
-                Advanced forms, dashboards, and automation for ClickUp agencies and power teams.
+                Protect your ClickUp data with automated backups, plus advanced forms, dashboards, and automation for agencies and power teams.
             </p>
 
             <!-- Waitlist Form (Powered by Formspree) -->
@@ -122,7 +122,7 @@
             <div class="problem-cards">
                 <div class="problem-card">
                     <p>
-                        <strong>Reporting is limited.</strong> You need custom velocity charts, agency reporting templates, and client-ready views. ClickUp's native dashboards don't tell the whole story.
+                        <strong>No native backup solution.</strong> You're building critical workflows in ClickUp with no way to protect your data. One mistake or accidental deletion could cost you months of work.
                     </p>
                 </div>
                 <div class="problem-card">
@@ -132,7 +132,7 @@
                 </div>
                 <div class="problem-card">
                     <p>
-                        <strong>Automation hits a wall.</strong> Webhooks are complex to set up, and you can't build the visual flows you need without third-party tools like Zapier.
+                        <strong>Reporting is limited.</strong> You need custom velocity charts, agency reporting templates, and client-ready views. ClickUp's native dashboards don't tell the whole story.
                     </p>
                 </div>
             </div>
@@ -158,9 +158,34 @@
             </div>
 
             <div class="workflow-steps">
-                <!-- Feature 1: Advanced Forms -->
+                <!-- Feature 1: Archive & Backup -->
                 <div class="workflow-step">
                     <div class="workflow-card highlight">
+                        <div class="workflow-card-content">
+                            <div class="workflow-number orange">
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                    <path d="M21 8v13H3V8"/>
+                                    <path d="M1 3h22v5H1z"/>
+                                    <path d="M10 12h4"/>
+                                </svg>
+                            </div>
+                            <div class="workflow-text">
+                                <h3>Backup & Archive Manager</h3>
+                                <p>Automated backups of your ClickUp data, better archive organization, and quick restore workflows. Protect critical work and keep your workspace clean.</p>
+                                <div class="ai-badge">
+                                    <svg class="badge-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                        <path d="M9.937 15.5A2 2 0 0 0 8.5 14.063l-6.135-1.582a.5.5 0 0 1 0-.962L8.5 9.936A2 2 0 0 0 9.937 8.5l1.582-6.135a.5.5 0 0 1 .963 0L14.063 8.5A2 2 0 0 0 15.5 9.937l6.135 1.581a.5.5 0 0 1 0 .964L15.5 14.063a2 2 0 0 0-1.437 1.437l-1.582 6.135a.5.5 0 0 1-.963 0z"/>
+                                    </svg>
+                                    Most Popular
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Feature 2: Advanced Forms -->
+                <div class="workflow-step">
+                    <div class="workflow-card">
                         <div class="workflow-card-content">
                             <div class="workflow-number purple">
                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
@@ -174,18 +199,12 @@
                             <div class="workflow-text">
                                 <h3>Advanced Forms Builder</h3>
                                 <p>Smart forms with conditional logic, client intake with file uploads, and pre-filling from ClickUp data. Automate your intake process.</p>
-                                <div class="ai-badge">
-                                    <svg class="badge-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                                        <path d="M9.937 15.5A2 2 0 0 0 8.5 14.063l-6.135-1.582a.5.5 0 0 1 0-.962L8.5 9.936A2 2 0 0 0 9.937 8.5l1.582-6.135a.5.5 0 0 1 .963 0L14.063 8.5A2 2 0 0 0 15.5 9.937l6.135 1.581a.5.5 0 0 1 0 .964L15.5 14.063a2 2 0 0 0-1.437 1.437l-1.582 6.135a.5.5 0 0 1-.963 0z"/>
-                                    </svg>
-                                    Most Popular
-                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
 
-                <!-- Feature 2: Dashboards -->
+                <!-- Feature 3: Dashboards -->
                 <div class="workflow-step">
                     <div class="workflow-card">
                         <div class="workflow-card-content">
@@ -204,7 +223,7 @@
                     </div>
                 </div>
 
-                <!-- Feature 3: Automation -->
+                <!-- Feature 4: Automation -->
                 <div class="workflow-step">
                     <div class="workflow-card">
                         <div class="workflow-card-content">
@@ -217,25 +236,6 @@
                             <div class="workflow-text">
                                 <h3>Automation Studio</h3>
                                 <p>Visual automation builder with easy webhook integrations. Use pre-built automation recipes to save hours every week.</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Feature 4: Archive -->
-                <div class="workflow-step">
-                    <div class="workflow-card">
-                        <div class="workflow-card-content">
-                            <div class="workflow-number orange">
-                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                                    <path d="M21 8v13H3V8"/>
-                                    <path d="M1 3h22v5H1z"/>
-                                    <path d="M10 12h4"/>
-                                </svg>
-                            </div>
-                            <div class="workflow-text">
-                                <h3>Archive & Restore Manager</h3>
-                                <p>Better archive organization with quick restore workflows. Track archive analytics and keep your workspace clean.</p>
                             </div>
                         </div>
                     </div>
@@ -368,15 +368,23 @@
                         <div class="faq-grid">
                             <div class="faq-item">
                                 <h3>What is ClickKit?</h3>
-                                <p>ClickKit is a toolkit of advanced add-ons for ClickUp. It includes a Smart Forms Builder, Custom Dashboards, Automation Studio, and Archive Manager—designed for agencies and growing teams.</p>
+                                <p>ClickKit is a toolkit of advanced add-ons for ClickUp. It includes automated Backup & Archive Management, Smart Forms Builder, Custom Dashboards, and Automation Studio—designed for agencies and growing teams.</p>
+                            </div>
+                            <div class="faq-item">
+                                <h3>How does the backup feature work?</h3>
+                                <p>ClickKit automatically backs up your ClickUp data on a schedule you control. You can restore entire workspaces, lists, or individual tasks if anything goes wrong. Your backups are securely stored and easily accessible.</p>
+                            </div>
+                            <div class="faq-item">
+                                <h3>How does the Archive Manager work?</h3>
+                                <p>We provide a better interface to browse your archived tasks and lists, with bulk restore capabilities and analytics on your completed work. Never lose track of archived data again.</p>
                             </div>
                             <div class="faq-item">
                                 <h3>Who is it for?</h3>
-                                <p>ClickKit is built for ClickUp agencies and power teams that need more than the native features offer—specifically around forms, reporting, and complex automation.</p>
+                                <p>ClickKit is built for ClickUp agencies and power teams that need more than the native features offer—specifically around backup, forms, reporting, and complex automation.</p>
                             </div>
                             <div class="faq-item">
                                 <h3>How does it integrate with ClickUp?</h3>
-                                <p>ClickKit uses the official ClickUp API and webhooks to integrate seamlessly. Your data stays in ClickUp, but we give you new ways to view, capture, and automate it.</p>
+                                <p>ClickKit uses the official ClickUp API and webhooks to integrate seamlessly. Your data stays in ClickUp, but we give you new ways to protect, view, capture, and automate it.</p>
                             </div>
                             <div class="faq-item">
                                 <h3>What about the reporting dashboards?</h3>
@@ -391,16 +399,8 @@
                                 <p>Founder Pricing is $49/month (50% off). Agency Pricing is $129/month which allows you to manage up to 10 distinct clients/workspaces.</p>
                             </div>
                             <div class="faq-item">
-                                <h3>How does the Archive Manager work?</h3>
-                                <p>We provide a better interface to browse your archived tasks and lists, with bulk restore capabilities and analytics on your completed work.</p>
-                            </div>
-                            <div class="faq-item">
-                                <h3>Is there a free trial?</h3>
-                                <p>During the early access period, you can secure your spot with a fully refundable $49 deposit. We will offer a 14-day free trial at public launch.</p>
-                            </div>
-                            <div class="faq-item">
                                 <h3>Does this replace ClickUp?</h3>
-                                <p>No, ClickKit extends ClickUp. You continue to use ClickUp for task management, while ClickKit handles advanced forms, external reporting, and complex automations.</p>
+                                <p>No, ClickKit extends ClickUp. You continue to use ClickUp for task management, while ClickKit handles backup protection, advanced forms, external reporting, and complex automations.</p>
                             </div>
                         </div>
                     </div>
